[tool.poetry]
name = "multi-camera-live-object-tracking"
version = "0.1.0"
description = ""
authors = ["shahryarbhm <shahryarbahmeie@gmail.com>"]
readme = "README.md"
packages = [{include = "multi_camera_live_object_tracking"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
